--- a/public/number.html
+++ b/public/number.html
@@ -31,7 +31,8 @@
         <a class="md:block hidden" href="#!">
           <img src="./assets/images/logo/company-logo.png" alt="company-logo" width="290" height="70">
         </a>
-        <a class="md:text-white text-light-brown md:text-sm  text-xs font-semibold leading-6.5 tracking-wide" href="tel:+70000000000">+7 (000) 000-00-00</a>
+        <a class="md:text-white text-light-brown md:text-sm  text-xs font-semibold leading-6.5 tracking-wide"
+          href="tel:+70000000000">+7 (000) 000-00-00</a>
       </div>
     </header>
 
@@ -59,12 +60,13 @@
         </div>
         <div class="border-t border-b border-border-color">
           <div class="container flex items-stretch xl:gap-[52px] lg:w-auto w-full gap-8 lg:flex-row flex-col">
-            <div class="lg:border-r md:pt-9 pt-5 lg:pb-[60px] xl:pr-[102px] lg:pr-8 border-border-color lg:space-y-[52px] space-y-5">
+            <div
+              class="lg:border-r md:pt-9 pt-5 lg:pb-[60px] xl:pr-[102px] lg:pr-8 border-border-color lg:space-y-[52px] space-y-5">
               <div class="flex gap-3">
                 <a class="outline-btn" href="#!">Планировка</a>
                 <a class="outline-btn" href="#!">На этаже</a>
               </div>
-              <div class="bg-white lg:w-[565px] w-full h-[584px] flex items-center justify-center">
+              <div class="bg-white lg:w-[565px] w-full sm:h-[584px] h-[342px] px-[14px] flex items-center justify-center">
                 <img src="./assets/images/singl-room-project.png" alt="singl-room-project">
               </div>
             </div>
@@ -165,23 +167,29 @@
           </div>
           <div class="swiper interyer-nomer__swiper lg:mt-14 mt-5">
             <div class="swiper-wrapper">
-              <div class="swiper-slide h-[465px]">
-                <img class="h-[465px]" width="100%" height="465" src="assets/images/slide-img-1.png" alt="product img">
+              <div class="swiper-slide sm:h-[465px] h-[213px]">
+                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-1.png"
+                  alt="product img">
               </div>
-              <div class="swiper-slide h-[465px]">
-                <img class="h-[465px]" width="100%" height="465" src="assets/images/slide-img-2.png" alt="product img">
+              <div class="swiper-slide sm:h-[465px] h-[213px]">
+                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-2.png"
+                  alt="product img">
               </div>
-              <div class="swiper-slide h-[465px]">
-                <img class="h-[465px]" width="100%" height="465" src="assets/images/slide-img-3.png" alt="product img">
+              <div class="swiper-slide sm:h-[465px] h-[213px]">
+                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-3.png"
+                  alt="product img">
               </div>
-              <div class="swiper-slide h-[465px]">
-                <img class="h-[465px]" width="100%" height="465" src="assets/images/slide-img-1.png" alt="product img">
+              <div class="swiper-slide sm:h-[465px] h-[213px]">
+                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-1.png"
+                  alt="product img">
               </div>
-              <div class="swiper-slide h-[465px]">
-                <img class="h-[465px]" width="100%" height="465" src="assets/images/slide-img-2.png" alt="product img">
+              <div class="swiper-slide sm:h-[465px] h-[213px]">
+                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-2.png"
+                  alt="product img">
               </div>
-              <div class="swiper-slide h-[465px]">
-                <img class="h-[465px]" width="100%" height="465" src="assets/images/slide-img-3.png" alt="product img">
+              <div class="swiper-slide sm:h-[465px] h-[213px]">
+                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-3.png"
+                  alt="product img">
               </div>
             </div>
           </div>
@@ -200,8 +208,9 @@
       <section class="payment-methods">
         <div class="container">
           <h1 class="title">способы оплаты</h1>
-          <div class="lg-plus:flex items-stretch justify-between mt-[60px] border-t border-[#ECCCB373] ">
-            <div class="lg-plus:border-r border-[#ECCCB373] lg-plus:border-b-0 border-b lg-plus:pt-6 pt-5 lg-plus:pr-7 lg-plus:pb-2 pb-5">
+          <div class="lg-plus:flex items-stretch justify-between md:mt-[60px] mt-[30px] border-t border-[#ECCCB373] ">
+            <div
+              class="lg-plus:border-r border-[#ECCCB373] lg-plus:border-b-0 border-b lg-plus:pt-6 pt-5 lg-plus:pr-7 lg-plus:pb-2 pb-5">
               <div class="w-[52px] h-[52px] rounded-full flex items-center justify-center bg-light-brown">
                 <img src="./assets/images/icons/procent.svg" alt="procent icon">
               </div>
@@ -213,7 +222,8 @@
                 Вас индивидуальное предложение.
               </p>
             </div>
-            <div class="lg-plus:border-r border-[#ECCCB373] lg-plus:border-b-0 border-b lg-plus:pt-6 pt-5 lg-plus:pr-7 lg-plus:pb-2 pb-5 lg-plus:pl-[26px]">
+            <div
+              class="lg-plus:border-r border-[#ECCCB373] lg-plus:border-b-0 border-b lg-plus:pt-6 pt-5 lg-plus:pr-7 lg-plus:pb-2 pb-5 lg-plus:pl-[26px]">
               <div class="w-[52px] h-[52px] rounded-full flex items-center justify-center bg-light-brown">
               </div>
               <h3
@@ -226,7 +236,8 @@
                 без переплат.
               </p>
             </div>
-            <div class="lg-plus:border-r border-[#ECCCB373] lg-plus:border-b-0 border-b lg-plus:pt-6 pt-5 lg-plus:pr-7 lg-plus:pb-2 pb-5 lg-plus:pl-[26px]">
+            <div
+              class="lg-plus:border-r border-[#ECCCB373] lg-plus:border-b-0 border-b lg-plus:pt-6 pt-5 lg-plus:pr-7 lg-plus:pb-2 pb-5 lg-plus:pl-[26px]">
               <div class="w-[52px] h-[52px] rounded-full flex items-center justify-center bg-light-brown">
               </div>
               <h3
@@ -253,10 +264,11 @@
       </section>
 
       <!-- mortgage calculator -->
-      <section class="mortgage-calculator bg-light-brown pt-[58px] pb-[76px] mt-10">
+      <section class="mortgage-calculator bg-light-brown md:pt-[58px] pt-12 md:pb-[76px] pb-9 mt-10">
         <div class="container">
           <h3 class="title-xl">калькулятор ипотеки</h3>
-          <div class="mt-[33px] flex items-center justify-between gap-[53px] text-gray">
+          <div
+            class="md:mt-[33px] mt-7 flex lg:flex-row flex-col items-center justify-between lg:gap-[53px] gap-8 text-gray">
             <div class="w-full">
               <span class="text-sm leading-[18px] font-light font-Muller block">Стоимость недвижимости</span>
               <span id="toSliderTooltip1"
@@ -297,32 +309,33 @@
               </div>
             </div>
           </div>
-          <div class="flex items-center justify-between mt-10">
+          <div class="flex md:items-center md:flex-row flex-col gap-3 justify-between mt-10">
             <span
               class="text-[40px] leading-[41.28px] font-medium font-ReformaGrotesk text-gray block total-price">20.567
               руб / мес</span>
-            <a class="gray-btn__lg" href="#!">Заказать консультацию</a>
+            <a class="gray-btn__lg text-center" href="#!">Заказать консультацию</a>
           </div>
         </div>
       </section>
 
       <!-- similar-numbers -->
-      <section class="similar-numbers my-[120px]">
+      <section class="similar-numbers lg-plus:my-[120px] my-[50px]">
         <div class="container flex justify-between items-end">
           <h1 class="title">Похожие номера</h1>
 
-          <div class="btns flex gap-[53px]">
+          <div class="btns flex md:gap-[53px] gap-8">
             <button class="prev-btn-two">
-              <img src="./assets/images/icons/prev-arrow.svg" alt="prev-arrow">
+              <img class="md:w-auto w-8" src="./assets/images/icons/prev-arrow.svg" alt="prev-arrow">
             </button>
             <button class="next-btn-two">
-              <img src="./assets/images/icons/next-arrow.svg" alt="next-arrow">
+              <img class="md:w-auto w-8" src="./assets/images/icons/next-arrow.svg" alt="next-arrow">
             </button>
           </div>
         </div>
-        <div class="swiper similar-numbers__swiper mt-[42px]">
+        <div class="swiper similar-numbers__swiper md:mt-[42px] mt-6">
           <div class="swiper-wrapper">
-            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+            <div
+              class="swiper-slide space-y-9 lg:border-r border-t border-b border-[#B9998469] md:pl-8 pl-5 md:pr-6 pr-5 py-6">
               <div class="flex items-center justify-between text-light-brown">
                 <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
                 <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
@@ -347,7 +360,8 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+            <div
+              class="swiper-slide space-y-9 lg:border-r border-t border-b border-[#B9998469] md:pl-8 pl-5 md:pr-6 pr-5 py-6">
               <div class="flex items-center justify-between text-light-brown">
                 <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
                 <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
@@ -372,7 +386,8 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+            <div
+              class="swiper-slide space-y-9 lg:border-r border-t border-b border-[#B9998469] md:pl-8 pl-5 md:pr-6 pr-5 py-6">
               <div class="flex items-center justify-between text-light-brown">
                 <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
                 <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
@@ -397,7 +412,8 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide space-y-9 pl-8 pr-6 py-6 border-r border-t border-b border-[#B9998469]">
+            <div
+              class="swiper-slide space-y-9 md:pl-8 pl-5 md:pr-6 pr-5 py-6 lg:border-r border-t border-b border-[#B9998469]">
               <div class="flex items-center justify-between text-light-brown">
                 <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
                 <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
@@ -422,7 +438,8 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+            <div
+              class="swiper-slide space-y-9 lg:border-r border-t border-b border-[#B9998469] md:pl-8 pl-5 md:pr-6 pr-5 py-6">
               <div class="flex items-center justify-between text-light-brown">
                 <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
                 <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
@@ -447,7 +464,8 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+            <div
+              class="swiper-slide space-y-9 lg:border-r border-t border-b border-[#B9998469] md:pl-8 pl-5 md:pr-6 pr-5 py-6">
               <div class="flex items-center justify-between text-light-brown">
                 <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
                 <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
@@ -472,7 +490,8 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+            <div
+              class="swiper-slide space-y-9 lg:border-r border-t border-b border-[#B9998469] md:pl-8 pl-5 md:pr-6 pr-5 py-6">
               <div class="flex items-center justify-between text-light-brown">
                 <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
                 <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
@@ -497,7 +516,8 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide space-y-9 pl-8 pr-6 py-6 border-r border-t border-b border-[#B9998469]">
+            <div
+              class="swiper-slide space-y-9 md:pl-8 pl-5 md:pr-6 pr-5 py-6 lg:border-r border-t border-b border-[#B9998469]">
               <div class="flex items-center justify-between text-light-brown">
                 <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
                 <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
@@ -534,45 +554,55 @@
           <h1 class="title">Преимущества комплекса</h1>
 
           <div class="mt-[51px] flex flex-col gap-10">
-            <div class="flex items-center justify-between gap-[102px]">
+            <div class="flex lg-plus:flex-row flex-col lg-plus:items-center justify-between lg:gap-[102px] gap-5">
               <img src="./assets/images/product-img-1.png" alt="product img">
-              <div class="max-w-[515px] flex flex-col gap-6">
-                <div class="text-[54px] leading-[55.73px] text-light-brown font-medium font-ReformaGrotesk uppercase">
+              <div class="max-w-[515px] flex flex-col lg-plus:gap-6">
+                <div
+                  class="md:text-[54px] text-[32px] md:leading-[55.73px] leading-[33.02px] lg-plus:pb-0 pb-2 text-light-brown font-medium font-ReformaGrotesk uppercase">
                   01
                   —</div>
-                <div class="text-2xl leading-6 text-light-brown font-normal font-Muller uppercase">Заголовок
+                <div
+                  class="md:text-2xl text-base leading-6 lg-plus:pb-0 pb-2 text-light-brown font-normal font-Muller uppercase">
+                  Заголовок
                   преимущества
                 </div>
-                <p class="desc">
+                <p class="md:text-lg text-sm font-Muller text-light-white leading-6 tracking-wide font-light">
                   Сложно придумать более идеальную локацию для гостиничного комплекса у резидентов Корсакова будет
                   соблюдён баланс всех сфер жизни как на территории отеля, так и за его пределами.
                 </p>
               </div>
             </div>
-            <div class="flex items-center justify-between gap-[102px]">
-              <div class="max-w-[515px] flex flex-col gap-6">
-                <div class="text-[54px] leading-[55.73px] text-light-brown font-medium font-ReformaGrotesk uppercase">
-                  02 —</div>
-                <div class="text-2xl leading-6 text-light-brown font-normal font-Muller uppercase">Заголовок
+            <div class="flex lg-plus:flex-row flex-col lg-plus:items-center justify-between lg:gap-[102px] gap-5">
+              <div class="max-w-[515px] flex flex-col lg-plus:gap-6 lg-plus:-order-1 order-1">
+                <div
+                  class="md:text-[54px] text-[32px] md:leading-[55.73px] leading-[33.02px] lg-plus:pb-0 pb-2 text-light-brown font-medium font-ReformaGrotesk uppercase">
+                  02
+                  —</div>
+                <div
+                  class="md:text-2xl text-base leading-6 lg-plus:pb-0 pb-2 text-light-brown font-normal font-Muller uppercase">
+                  Заголовок
                   преимущества
                 </div>
-                <p class="desc">
+                <p class="md:text-lg text-sm font-Muller text-light-white leading-6 tracking-wide font-light">
                   Сложно придумать более идеальную локацию для гостиничного комплекса у резидентов Корсакова будет
                   соблюдён баланс всех сфер жизни как на территории отеля, так и за его пределами.
                 </p>
               </div>
               <img src="./assets/images/product-img-2.png" alt="product img">
             </div>
-            <div class="flex items-center justify-between gap-[102px]">
+            <div class="flex lg-plus:flex-row flex-col lg-plus:items-center justify-between lg:gap-[102px] gap-5">
               <img src="./assets/images/product-img-3.png" alt="product img">
-              <div class="max-w-[515px] flex flex-col gap-6">
-                <div class="text-[54px] leading-[55.73px] text-light-brown font-medium font-ReformaGrotesk uppercase">
+              <div class="max-w-[515px] flex flex-col lg-plus:gap-6">
+                <div
+                  class="md:text-[54px] text-[32px] md:leading-[55.73px] leading-[33.02px] lg-plus:pb-0 pb-2 text-light-brown font-medium font-ReformaGrotesk uppercase">
                   03
                   —</div>
-                <div class="text-2xl leading-6 text-light-brown font-normal font-Muller uppercase">Заголовок
+                <div
+                  class="md:text-2xl text-base leading-6 lg-plus:pb-0 pb-2 text-light-brown font-normal font-Muller uppercase">
+                  Заголовок
                   преимущества
                 </div>
-                <p class="desc">
+                <p class="md:text-lg text-sm font-Muller text-light-white leading-6 tracking-wide font-light">
                   Сложно придумать более идеальную локацию для гостиничного комплекса у резидентов Корсакова будет
                   соблюдён баланс всех сфер жизни как на территории отеля, так и за его пределами.
                 </p>
@@ -585,12 +615,13 @@
     </main>
 
     <!-- footer -->
-    <footer class="bg-light-brown pt-[73px] pb-[61px] mt-[120px]" id="footer">
-      <div class="container flex items-start justify-between gap-[99px]">
+    <footer class="bg-light-brown md:pt-[73px] pt-11 pb-5 md:pb-[61px] md:mt-[120px] mt-[50px]" id="footer">
+      <div class="container flex lg-plus:flex-row flex-col items-start justify-between lg:gap-[99px] gap-8">
         <a href="#!">
           <img src="./assets/images/logo/compant-logo-black.png" alt="company-logo" width="261" height="63">
         </a>
-        <div class="flex items-start gap-[108px] w-full">
+        <div
+          class="flex lg-plus:flex-row flex-col items-start lg:gap-[108px] gap-5 w-full lg:justify-start justify-between">
           <div>
             <div class="text-graphite-gray font-medium text-sm leading-8 pb-10px">Покупателям</div>
             <ul>
